fix toggle button on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5529,3 +5529,7 @@ box-shadow: 0px 0px 29px 6px rgba(0,0,0,0.76) !important;
   font-size: 12px;
   padding: 2px 25px;
 }
+
+#menu_slide:hover {
+  background-color: #428bca !important;
+}
